package com.example.model;

import java.util.ArrayList;

public class BaseList<TEntity, TCollection> extends ArrayList<TEntity> {}
